objects/mcsocsel10__SocialInsightsRecordConfig__c.object
<CustomObject>
    <fields>
        <fullName>mcsocsel10__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__Keywords__c</fullName>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__RecordId__c</fullName>
        <label>Record Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Social Intelligence Record Config</label>
    <nameField>
        <label>Social Intelligence Record Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Intelligence Record Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>